--- a/BEST SCORE CON VALUTAZIONE GIUSTA TEST.ipynb
+++ b/BEST SCORE CON VALUTAZIONE GIUSTA TEST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "741e12de",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
     "from challenge.src.common import load_data, prepare_train_data, generate_submission\n",
     "from challenge.src.eval import evaluate_retrieval, visualize_retrieval\n",
     "# ==== Config ====\n",
-    "MODEL_PATH = \"models/maxmatch_adapter_k6_sinkhorn.pth\"\n",
+    "MODEL_PATH = \"models/maxmatch_adapter.pth\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "EPOCHS = 25\n",
     "BATCH_SIZE = 256\n",
@@ -574,9 +574,6 @@
     "K_SLOTS = 6\n",
     "SLOT_DROPOUT_P = 0.10\n",
     "\n",
-    "SINKHORN_ITERS = 30            # più iterazioni → P più vicino a bistocastica 'dura'\n",
-    "SINKHORN_TAU_START = 0.208\n",
-    "SINKHORN_TAU_END   = 0.06     # fine più freddo → meno frazionarietà\n",
     "DETACH_ASSIGNMENT = True\n",
     "\n",
     "SCALE_S = 0.47\n",
@@ -675,61 +672,12 @@
     "        S_T = E_T + F.normalize(t_vis, dim=-1).unsqueeze(1)\n",
     "        S_T = F.normalize(S_T, dim=-1)\n",
     "        return S_T, E_T, F.normalize(t_vis, dim=-1)\n",
-    "# ============================================================\n",
-    "# 2) Sinkhorn matching (soft, entropic-regularized doubly-stochastic)\n",
-    "#    sim -> P ~ doubly-stochastic, poi S_H = <P, sim>/K\n",
-    "# ============================================================\n",
-    "def sinkhorn_logspace(log_K: torch.Tensor, iters: int = 10) -> torch.Tensor:\n",
-    "    \"\"\"\n",
-    "    Log-space Sinkhorn per stabilità numerica.\n",
-    "    log_K: (B, K, K) log-kernel (logits pre-softmax)\n",
-    "    Ritorna log_P: (B, K, K) ~ log matrix bistocastica\n",
-    "    \"\"\"\n",
-    "    B, K, _ = log_K.shape\n",
-    "    log_u = torch.zeros(B, K, device=log_K.device)\n",
-    "    log_v = torch.zeros(B, K, device=log_K.device)\n",
     "\n",
-    "    for _ in range(iters):\n",
-    "        # normalizza righe\n",
-    "        log_u = -torch.logsumexp(log_K + log_v.unsqueeze(1), dim=2)\n",
-    "        # normalizza colonne\n",
-    "        log_v = -torch.logsumexp(log_K + log_u.unsqueeze(2), dim=1)\n",
-    "\n",
-    "    log_P = log_K + log_u.unsqueeze(2) + log_v.unsqueeze(1)\n",
-    "    return log_P\n",
-    "\n",
-    "def sinkhorn_assignment(sim: torch.Tensor, tau: float = 0.1, iters: int = 10,\n",
-    "                        detach_input: bool = True) -> torch.Tensor:\n",
-    "    \"\"\"\n",
-    "    sim: (B, K, K) similarità coseno.\n",
-    "    Costruisce kernel K_ij = exp(sim_ij / tau), applica Sinkhorn per ottenere P ~ bistocastica.\n",
-    "    Se detach_input=True, rimuove il gradiente dalla matrice di sim nel calcolo dell'assegnamento,\n",
-    "    replicando lo schema \"stop-grad\" usato in MaxMatch per la parte di matching.\n",
-    "    \"\"\"\n",
-    "    if detach_input:\n",
-    "        sim = sim.detach()\n",
-    "    log_K = sim / max(tau, 1e-6)\n",
-    "    log_P = sinkhorn_logspace(log_K, iters=iters)\n",
-    "    P = torch.exp(log_P)  # (B, K, K), righe/colonne ~ 1\n",
-    "    return P\n",
     "\n",
     "def cosine_matrix(A: torch.Tensor, B: torch.Tensor) -> torch.Tensor:\n",
     "    # (B, K, D) x (B, D, K) -> (B, K, K)\n",
     "    return torch.matmul(A, B.transpose(-1, -2))\n",
     "\n",
-    "def s_h_maxmatch_sinkhorn(\n",
-    "    S_T: torch.Tensor, V: torch.Tensor, *,\n",
-    "    tau: float, iters: int, detach: bool\n",
-    ") -> torch.Tensor:\n",
-    "    B, K, D = S_T.shape\n",
-    "    Vn = F.normalize(V, dim=-1)\n",
-    "    S_V = Vn.unsqueeze(1).expand(-1, K, -1)        # (B, K, D)\n",
-    "    sims = torch.matmul(S_T, S_V.transpose(-1, -2))# (B, K, K)\n",
-    "    P = sinkhorn_assignment(sims, tau=tau, iters=iters, detach_input=detach)\n",
-    "    return (P * sims).sum(dim=(1, 2)) / K\n",
-    "\n",
-    "def s_h(S_T: torch.Tensor, V: torch.Tensor, *, tau, iters, detach) -> torch.Tensor:\n",
-    "    return s_h_maxmatch_sinkhorn(S_T, V, tau=tau, iters=iters, detach=detach)\n",
     "\n",
     "\n",
     "\n",
@@ -881,7 +829,7 @@
     "\n",
     "\n",
     "print(f\"Parameters: {sum(p.numel() for p in model.parameters()):,}\")\n",
-    "print(\"\\n[Train] MaxMatch + Sinkhorn + ISDL + GDL (curriculum su τ) ...\")\n",
+    "print(\"\\n[Train] MaxMatch + ISDL + GDL (curriculum su τ) ...\")\n",
     "\n",
     "# ============================================================\n",
     "# 4) GDL – Global Discriminative Loss (Alomari 2025)\n",
@@ -894,45 +842,6 @@
     "    sims = torch.einsum('bkd,bd->bk', E_Tn, t_vis_norm).clamp(-1,1)\n",
     "    return torch.exp(s * (sims - delta2)).mean()\n",
     "\n",
-    "\n",
-    "\n",
-    "# ============================================================\n",
-    "# 5) Diagnostica\n",
-    "# ============================================================\n",
-    "\n",
-    "\n",
-    "\n",
-    "@torch.no_grad()\n",
-    "def quick_margin_on_val_batch(model, val_dataset, device, tau, iters, detach=True, batch=512):\n",
-    "    loader = DataLoader(val_dataset, batch_size=min(batch, len(val_dataset)), shuffle=True)\n",
-    "    Xb, Yb = next(iter(loader))\n",
-    "    Xb, Yb = Xb.to(device), Yb.to(device)\n",
-    "\n",
-    "    # forward\n",
-    "    S_T, _, _ = model(Xb)                          # (B,K,D)\n",
-    "    B, K, D = S_T.shape\n",
-    "    V_all = F.normalize(Yb, dim=-1)                # (B,D)\n",
-    "\n",
-    "    # s_pos\n",
-    "    s_pos = s_h(S_T, Yb, tau=tau, iters=iters, detach=detach)  # (B,)\n",
-    "\n",
-    "    # s_neg (hardest in-batch)\n",
-    "    CH = 256\n",
-    "    max_negs = []\n",
-    "    for start in range(0, B, CH):\n",
-    "        end = min(B, start + CH)\n",
-    "        S_blk = S_T[start:end]                                     # (ch,K,D)\n",
-    "        S_exp = S_blk.unsqueeze(1).expand(end-start, B, K, D).reshape((end-start)*B, K, D)\n",
-    "        V_exp = V_all.unsqueeze(0).expand(end-start, B, D).reshape((end-start)*B, D)\n",
-    "        s_blk = s_h(S_exp, V_exp, tau=tau, iters=iters, detach=detach).view(end-start, B)\n",
-    "        rows = torch.arange(end-start, device=device)\n",
-    "        cols = torch.arange(start, end,   device=device)\n",
-    "        s_blk[rows, cols] = float('-inf')                           # maschera il positivo\n",
-    "        max_negs.append(s_blk.max(dim=1).values)\n",
-    "    s_neg = torch.cat(max_negs, dim=0)                              # (B,)\n",
-    "\n",
-    "    margin = (s_pos - s_neg).mean().item()\n",
-    "    return margin, s_pos.mean().item(), s_neg.mean().item()\n",
     "\n",
     "\n",
     "\n",
@@ -1000,8 +909,6 @@
     "        model.train()\n",
     "        logvar_vals, offdiag_vals = [], []\n",
     "        frac = (epoch - 1) / max(epochs - 1, 1)\n",
-    "        SINKHORN_TAU = SINKHORN_TAU_START + frac * (SINKHORN_TAU_END - SINKHORN_TAU_START)\n",
-    "        SINKHORN_TAU = max(SINKHORN_TAU_END, SINKHORN_TAU)  # floor = *_END\n",
     "\n",
     "        for Xb, Yb in tqdm(train_loader, desc=f\"[Train] Epoch {epoch}/{epochs}\"):\n",
     "\n",
@@ -1068,15 +975,7 @@
     "\n",
     "\n",
     "\n",
-    "        \n",
-    "\n",
-    "        #Versione rapidissima (1 batch di val)    \n",
-    "        if epoch == 4:\n",
-    "            margin, spos_m, sneg_m = quick_margin_on_val_batch(\n",
-    "                model, val_dataset, DEVICE,\n",
-    "                tau=SINKHORN_TAU, iters=SINKHORN_ITERS, detach=True, batch=512\n",
-    "            )\n",
-    "            print(f\"[Val-quick] margin={margin:.4f} | s_pos={spos_m:.4f} | s_neg*={sneg_m:.4f}\")\n",
+    "    \n",
     "\n",
     "\n",
     "        # ===== Validation: proxy coerente con la submission (cos(Z, Y)) =====\n",
