--- a/BEST SCORE CON VALUTAZIONE GIUSTA TEST.ipynb
+++ b/BEST SCORE CON VALUTAZIONE GIUSTA TEST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "741e12de",
    "metadata": {},
    "outputs": [
@@ -14,62 +14,384 @@
       "Train data: 125000 captions, 125000 images\n",
       "Train captions: 112,420 | Val captions: 12,580\n",
       "Train images  : 22,484 | Val images  : 2,516\n",
-      "=== RUN_ID = 3 | SEED = 45 ===\n"
+      "=== RUN_ID = 5 | SEED = 47 ===\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train] Epoch 1/24: 100%|██████████| 879/879 [00:17<00:00, 51.69it/s]\n"
+      "[Train] Epoch 1/24: 100%|██████████| 879/879 [00:16<00:00, 54.86it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      losses: tri=0.0138 | slot=0.3446 | isd=0.1377 | cond=0.0943\n",
+      "      losses: tri=0.0206 | slot=0.3774 | isd=0.1137 | cond=0.0551\n",
       "  ☐ Saved epoch_001.pth\n",
-      "  ✅ New best MRR (0.39639) → saved vsepp_text2vis_best_seed3.pth\n"
+      "  ✅ New best MRR (0.34813) → saved vsepp_text2vis_best_seed5.pth\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train] Epoch 2/24: 100%|██████████| 879/879 [00:16<00:00, 54.68it/s]\n"
+      "[Train] Epoch 2/24: 100%|██████████| 879/879 [00:15<00:00, 55.41it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      losses: tri=0.0067 | slot=0.1273 | isd=0.1403 | cond=0.0793\n",
+      "      losses: tri=0.0142 | slot=0.2942 | isd=0.1163 | cond=0.0490\n",
       "  ☐ Saved epoch_002.pth\n",
-      "  ✅ New best MRR (0.41903) → saved vsepp_text2vis_best_seed3.pth\n"
+      "  ✅ New best MRR (0.39605) → saved vsepp_text2vis_best_seed5.pth\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train] Epoch 3/24: 100%|██████████| 879/879 [00:16<00:00, 53.86it/s]\n"
+      "[Train] Epoch 3/24: 100%|██████████| 879/879 [00:15<00:00, 57.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      losses: tri=0.0038 | slot=0.0557 | isd=0.1455 | cond=0.0690\n",
+      "      losses: tri=0.0059 | slot=0.0935 | isd=0.0858 | cond=0.0468\n",
       "  ☐ Saved epoch_003.pth\n",
-      "  ✅ New best MRR (0.43632) → saved vsepp_text2vis_best_seed3.pth\n"
+      "  ✅ New best MRR (0.40254) → saved vsepp_text2vis_best_seed5.pth\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train] Epoch 4/24:  88%|████████▊ | 777/879 [00:13<00:01, 59.65it/s]"
+      "[Train] Epoch 4/24: 100%|██████████| 879/879 [00:15<00:00, 58.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0033 | slot=0.0386 | isd=0.0660 | cond=0.0503\n",
+      "  ☐ Saved epoch_004.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 5/24: 100%|██████████| 879/879 [00:14<00:00, 59.68it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0123 | slot=0.1327 | isd=0.0657 | cond=0.0541\n",
+      "  ☐ Saved epoch_005.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 6/24: 100%|██████████| 879/879 [00:14<00:00, 59.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0045 | slot=0.0639 | isd=0.0666 | cond=0.0583\n",
+      "  ☐ Saved epoch_006.pth\n",
+      "  ✅ New best MRR (0.41546) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 7/24: 100%|██████████| 879/879 [00:15<00:00, 57.45it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0033 | slot=0.0413 | isd=0.0661 | cond=0.0611\n",
+      "  ☐ Saved epoch_007.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 8/24: 100%|██████████| 879/879 [00:15<00:00, 55.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0038 | slot=0.0769 | isd=0.0674 | cond=0.0597\n",
+      "  ☐ Saved epoch_008.pth\n",
+      "  ✅ New best MRR (0.42340) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 9/24: 100%|██████████| 879/879 [00:17<00:00, 50.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0054 | slot=0.0846 | isd=0.0685 | cond=0.0556\n",
+      "  ☐ Saved epoch_009.pth\n",
+      "  ✅ New best MRR (0.42441) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 10/24: 100%|██████████| 879/879 [00:15<00:00, 57.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0005 | slot=0.0201 | isd=0.0680 | cond=0.0537\n",
+      "  ☐ Saved epoch_010.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 11/24: 100%|██████████| 879/879 [00:15<00:00, 57.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0008 | slot=0.0183 | isd=0.0684 | cond=0.0521\n",
+      "  ☐ Saved epoch_011.pth\n",
+      "  ✅ New best MRR (0.42580) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 12/24: 100%|██████████| 879/879 [00:14<00:00, 60.46it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0033 | slot=0.1122 | isd=0.0689 | cond=0.0513\n",
+      "  ☐ Saved epoch_012.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 13/24: 100%|██████████| 879/879 [00:16<00:00, 53.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0009 | slot=0.0266 | isd=0.0696 | cond=0.0493\n",
+      "  ☐ Saved epoch_013.pth\n",
+      "  ✅ New best MRR (0.43201) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 14/24: 100%|██████████| 879/879 [00:15<00:00, 58.53it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0018 | isd=0.0701 | cond=0.0562\n",
+      "  ☐ Saved epoch_014.pth\n",
+      "  ✅ New best MRR (0.43782) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 15/24: 100%|██████████| 879/879 [00:14<00:00, 59.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0030 | isd=0.0700 | cond=0.0523\n",
+      "  ☐ Saved epoch_015.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 16/24: 100%|██████████| 879/879 [00:14<00:00, 59.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0020 | isd=0.0697 | cond=0.0465\n",
+      "  ☐ Saved epoch_016.pth\n",
+      "  ✅ New best MRR (0.44238) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 17/24: 100%|██████████| 879/879 [00:14<00:00, 59.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0329 | isd=0.0708 | cond=0.0464\n",
+      "  ☐ Saved epoch_017.pth\n",
+      "  ✅ New best MRR (0.44408) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 18/24: 100%|██████████| 879/879 [00:15<00:00, 58.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0027 | isd=0.0707 | cond=0.0487\n",
+      "  ☐ Saved epoch_018.pth\n",
+      "  ✅ New best MRR (0.44468) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 19/24: 100%|██████████| 879/879 [00:14<00:00, 59.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0013 | slot=0.0331 | isd=0.0708 | cond=0.0466\n",
+      "  ☐ Saved epoch_019.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 20/24: 100%|██████████| 879/879 [00:14<00:00, 58.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0019 | isd=0.0698 | cond=0.0483\n",
+      "  ☐ Saved epoch_020.pth\n",
+      "  ✅ New best MRR (0.44513) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 21/24: 100%|██████████| 879/879 [00:15<00:00, 58.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0035 | isd=0.0708 | cond=0.0446\n",
+      "  ☐ Saved epoch_021.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 22/24: 100%|██████████| 879/879 [00:14<00:00, 58.80it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0024 | slot=0.0451 | isd=0.0700 | cond=0.0478\n",
+      "  ☐ Saved epoch_022.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 23/24: 100%|██████████| 879/879 [00:15<00:00, 58.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0000 | slot=0.0010 | isd=0.0706 | cond=0.0478\n",
+      "  ☐ Saved epoch_023.pth\n",
+      "  ✅ New best MRR (0.44669) → saved vsepp_text2vis_best_seed5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Train] Epoch 24/24: 100%|██████████| 879/879 [00:15<00:00, 56.68it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      losses: tri=0.0014 | slot=0.0031 | isd=0.0692 | cond=0.0453\n",
+      "  ☐ Saved epoch_024.pth\n",
+      "  ✅ New best MRR (0.44817) → saved vsepp_text2vis_best_seed5.pth\n",
+      "\n",
+      "=== Training finito. Best MRR val: 0.44817 | checkpoint: models/vsepp_text2vis_best_seed5.pth\n"
      ]
     }
    ],
@@ -99,7 +421,7 @@
     "from challenge.src.eval.metrics import mrr, recall_at_k, ndcg  # <- intoccabili\n",
     "\n",
     "# ==== Config (semplici, stile VSE++) ========================================\n",
-    "RUN_ID = 3 # <-- cambia a 0,1,2,... per i diversi modelli dell'ensemble\n",
+    "RUN_ID = 5 # <-- cambia a 0,1,2,... per i diversi modelli dell'ensemble\n",
     "\n",
     "MODEL_PATH = f\"models/vsepp_text2vis_best_seed{RUN_ID}.pth\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -549,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "e4796ce8",
    "metadata": {},
    "outputs": [
@@ -817,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "a40b7130",
    "metadata": {},
    "outputs": [
@@ -828,6 +1150,9 @@
       "Caricato per ensemble: models/vsepp_text2vis_best_seed0.pth\n",
       "Caricato per ensemble: models/vsepp_text2vis_best_seed1.pth\n",
       "Caricato per ensemble: models/vsepp_text2vis_best_seed2.pth\n",
+      "Caricato per ensemble: models/vsepp_text2vis_best_seed3.pth\n",
+      "Caricato per ensemble: models/vsepp_text2vis_best_seed4.pth\n",
+      "Caricato per ensemble: models/vsepp_text2vis_best_seed5.pth\n",
       "Generating submission file...\n",
       "✓ Saved submission to submission_ensemble.csv\n",
       "✓ Submission pronta (ENSEMBLE): submission_ensemble.csv\n"
@@ -843,9 +1168,9 @@
     "    \"models/vsepp_text2vis_best_seed0.pth\",\n",
     "    \"models/vsepp_text2vis_best_seed1.pth\",\n",
     "    \"models/vsepp_text2vis_best_seed2.pth\",\n",
-    "    # aggiungi altri se li hai, es:\n",
-    "    # \"models/vsepp_text2vis_best_seed3.pth\",\n",
-    "    # \"models/vsepp_text2vis_best_seed4.pth\",\n",
+    "    \"models/vsepp_text2vis_best_seed3.pth\",\n",
+    "    \"models/vsepp_text2vis_best_seed4.pth\",\n",
+    "    \"models/vsepp_text2vis_best_seed5.pth\",\n",
     "]\n",
     "\n",
     "def build_model_for_inference():\n",
